# vertesia-client-python

./: .env.example  .gitignore  .openapi-generator-ignore  AGENTS.md  CLAUDE.md  NOTICE  README.md  openapi-generator-config.yaml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: codeql.yaml  dependabot-auto-merge.yaml  generated-code-guard.yaml  release.yaml  test.yaml  zizmor.yaml
.openapi-generator/: FILES
scripts/: patch_forward_compat_enums.py  regenerate.sh
spec/: vertesia-openapi.json  vertesia-openapi.yaml
test/: test_client.py  test_generated_compatibility.py  test_live.py  test_version.py
vertesia_client/: __init__.py  client.py
vertesia_client/openapi/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
vertesia_client/openapi/api/: __init__.py  access_control_entries_api.py  accounts_api.py  agent_runs_api.py  api_keys_api.py  apps_api.py  audit_trail_api.py  bulk_operations_api.py  collections_api.py  commands_api.py  content_object_types_api.py  costs_api.py  data_api.py  environments_api.py  event_ingest_channels_api.py  event_subscriptions_api.py  events_api.py  files_api.py  interaction_runs_api.py  interactions_api.py  o_auth_clients_api.py  o_auth_grants_api.py  o_auth_providers_api.py  objects_api.py  processes_api.py  projects_api.py  prompt_templates_api.py  quota_api.py  remote_mcp_connections_api.py  rendering_api.py  roles_api.py  secrets_api.py  tasks_api.py  token_service_api.py  tools_api.py  user_groups_api.py  users_api.py  views_api.py  workflow_definitions_api.py  workflow_rules_api.py  (+1 more)
(+946 files in other folders)
