[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vertesia-client"
version = "1.4.0"
description = "Python client for the Vertesia API"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Vertesia", email = "contact@vertesia.com" }]
keywords = ["vertesia", "client", "openapi"]
dependencies = [
    "urllib3>=2.1.0,<3.0.0",
    "python-dateutil>=2.8.2",
    "pydantic>=2.11",
    "typing-extensions>=4.7.1",
]

[project.optional-dependencies]
dev = [
    "build",
    "ruff",
    "twine",
]

[project.urls]
Homepage = "https://www.vertesia.com"
Repository = "https://github.com/vertesia/vertesia-client-python"
Documentation = "https://docs.vertesia.com"

[tool.setuptools.packages.find]
include = ["vertesia_client*"]

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.ruff]
target-version = "py39"
line-length = 120
exclude = [
    ".venv",
    "build",
    "dist",
    "vertesia_client/openapi",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
